# DZSL

./: .env.example  .gitignore  .~lock.notes.txt#  CLAUDE.md  LICENSE  README.md  SECURITY.md  WORKFLOW.md  applog.py  config.py  connect.py  css.py  dayz_runtime.py  install.sh  main.py  pyproject.toml  steam_api.py  uri_handler.py  workorder-codex-steam-pause.md
.claude/: settings.local.json
.github/workflows/: ci.yml  codeql.yml
assets/: AGENTS.md  build_bg.py
dzsl/: __init__.py  __main__.py  application.py  bootstrap.py  fonts.py  http.py  lifecycle.py  paths.py  runtime.py
dzsl/core/: __init__.py  config.py  constants.py  environment.py  logging.py  uri.py
dzsl/services/: __init__.py  connector.py  dayz.py  launch_gate.py  listings.py  server_api.py
dzsl/steam/: __init__.py  api.py  gate.py  web_api.py  workshop.py
dzsl/ui/: __init__.py  add_server.py  branding.py  download.py  mods.py  (+11 more)
tests/: test_connect.py  test_dayz_launch.py  test_dayz_runtime.py  test_download_staging.py  test_flatpak.py  test_launch_gate.py  test_lifecycle.py  test_listings.py  test_paths.py  test_security.py  test_steam_api.py  test_steam_download_state.py  test_steam_readiness.py  test_steam_workshop.py  test_subscription.py  test_unsubscribe.py  test_uri_handler.py  test_workshop_gate.py  test_workshop_validation.py
ui/: add_server.py  download.py  favorites.py  helpers.py  modpacks.py  mods.py  ping.py  progress.py  server_create.py  server_promote.py  server_properties.py  server_rent.py  server_row.py  servers.py  settings.py  subscribe.py  welcome.py  workshop_actions.py
(+5 files in other folders)
