[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "dzsl"
version = "0.0.6"
description = "Native DayZ server launcher for Linux"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[project.scripts]
dzsl = "dzsl.application:main"

[tool.setuptools.package-data]
dzsl = ["assets/*.png", "assets/*.svg", "assets/fonts/*.ttf", "assets/fonts/*.txt"]

[tool.setuptools.packages.find]
include = ["dzsl*"]
